@startuml Word

!include language.puml

enum WordType {
    ROOT
    DETERMINER
    ADPOSITION
    CONJUNCTION
    PRONOUN
    NOUN
    NUMERAL
    ADJECTIVE
    ADVERB
    VERB
}

class Word {
    int id
    int language_id
    WordType word_type
    string spelling
    string definition
    json translations
}

Word --> WordType

Language "1" *-- "*" Word

@enduml
